# Hometask

./: 5c3624f9-9831-4b43-9bf4-5412cd512d8d.sqlite3  Cargo.toml  cspell.json  database.sqlite3
migrations/: 20240425114538_profile.sql  20240425200403_contracts.sql  20240425200505_jobs.sql  20240425200608_seed.sql
src/: application.rs  config.rs  enums.rs  lib.rs  loader.rs  main.rs
src/extractors/: mod.rs  profile.rs  validate.rs
src/models/: handler.rs  mod.rs  profile.rs
src/routes/: balances.rs  mod.rs
src/routes/admin/: best_client.rs  best_profession.rs  mod.rs
src/routes/contract/: get_by_id.rs  list.rs  mod.rs
src/routes/jobs/: mod.rs  pay.rs  unpaid.rs
src/types/: contract.rs  job.rs  mod.rs  profile.rs
src/utils/: err.rs  response.rs
tests/: main.rs
tests/admin/: best_clients.rs  best_profession.rs  mod.rs
tests/balances/: mod.rs
tests/contracts/: get_by_id.rs  get_list.rs  mod.rs
tests/helper/: test_app.rs
tests/jobs/: mod.rs  pay.rs  unpaid.rs
